--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,16 @@
   		<artifactId>activemq-all</artifactId>
   		<version>5.14.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>javax.validation</groupId>
+  		<artifactId>validation-api</artifactId>
+  		<version>1.1.0.Final</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-validator</artifactId>
+  		<version>5.3.2.Final</version>
+  	</dependency>
   </dependencies>
 
   <profiles>
